# EngineXRules

./: CMakeLists.txt  README.md
include/: ExecutionEngine.hpp  Ruleset.hpp
src/: ExecutionEngine.cpp  Ruleset.cpp  main.cpp
